    and avrmlat output. (github issue #44)
  * Fix queueing/resending very old Mode A/C messages (github issue #47)
  * Support a variety of sample input formats, generalize sample conversion
  * Support noise measurement via --measure-noise
  * Support DC filtering (quite expensive) via --dcfilter
  * Track age of heading/speed/altitude; use this when deciding what to emit
    in FATSV format

 -- Oliver Jowett <oliver@mutability.co.uk>  Thu, 19 Feb 2015 22:39:19 +0000

dump1090-mutability (1.14) unstable; urgency=medium

  * Position reporting:
    * Use the correct maximum inter-position-message intervals for surface
      position messages (github issue #18).
    * Disable receiver-relative position decoding entirely if the receiver
      max range is larger than 360NM.
    * Implement speed checks on position updates; implausible position
      changes are discarded, unless they improve NUCp. Fixes most cases
      of "spikes" in position tracks for aircraft with poor GPS data, and
      helps with many cases where aircraft are transmitting garbage position
      data. (github issue #17)
    * If a position update is considered implausible, discard all the other
      data in the same message too, just in case - often altitude will be
      wrong in this case, too.

  * Message decoding/forwarding:
    * NUCp (navigational uncertainty) is extracted from position messages
      (github issue #16)
    * Improved support for DF18 ADS-R/TIS-B message formats and
      cases where they use non-ICAO addresses (handle the IMF bit)
    * Don't forward the first message for an aircraft to network clients
      until we have seen a second message from the same aircraft.
      This should handle most of the "garbage ICAO address" cases.
      Disabled in --net-verbatim mode.
    * Aircraft with only one message seen are pruned more aggressively
      (60 second timeout vs. 300 second timeout normally)
    * Don't emit SBS output for non-ICAO addresses (github issue #9)